fix command wrap and margins

--- a/Source/slugs/css/terminal.css
+++ b/Source/slugs/css/terminal.css
@@ -1,7 +1,9 @@
+* {
+    border-radius: 15px;
+}
 .terminal {
     font-family: 'Inconsolata', monospace;
     background-color:rgba(255, 152, 238, 0.2);
-    border-radius: 15px;
     overflow-y: scroll;
     overflow-x: hidden;
     scroll-behavior: smooth;
@@ -11,19 +13,19 @@
     width: 10px;
     border-radius: 5px;
     margin-left:-10px;
-  }
-  ::-webkit-scrollbar-track {
+}
+::-webkit-scrollbar-track {
     margin-top: 10px;
     margin-bottom: 10px;
-  }
-  ::-webkit-scrollbar-thumb {
+}
+::-webkit-scrollbar-thumb {
     background: rgba(255, 152, 238, 1); 
     border-radius: 15px;
     max-height: 80%;
-  }
-  ::-webkit-scrollbar-thumb:hover {
+}
+::-webkit-scrollbar-thumb:hover {
     background: rgb(255, 205, 247); 
-  }
+}
 
 #terminal_container {
     float:right;    
@@ -57,19 +59,23 @@
 
 .logSegment {
     background-color:rgba(255, 152, 238, 0.5);
-    border-radius: 15px;
     padding: 5px; 
     margin: 5px;
     border:1px line black;
 }
 
 #autocomplete_parent {
+    word-break: break-all;
     display: grid;
     grid-template-columns: 1fr;
+    padding:5px;
+    margin-right: 20px;
 }
 #autocomplete_parent div, #autocomplete_parent textarea { 
     grid-row-start: 1;
     grid-column-start: 1;
+    background-color: rgba(255, 200, 240, 0.8);
+    resize: none;
 }
 
 
@@ -104,7 +110,6 @@
 
 .logEntry {
     background-color:rgba(93, 255, 206, 0.1);
-    border-radius: 15px;
     padding: 10px; 
     margin: 5px 3px;
 }
@@ -118,6 +123,7 @@
 .error {
     background-color: rgba(255,102,0);
     color: white;
+    word-break: break-all;
 }
 .old {
  opacity: 0.5;  
@@ -129,13 +135,11 @@
     overflow-y: hidden;
     text-overflow: ellipsis; 
 }
-.collapsed::last
 
 .cmd {
     font-weight: bold;
     color: black;
     background-color:rgba(240, 240, 240, .2);
-    border-radius: 15px;
     padding: 2px 3px;
 }
 
